# zenapp

./: .gitignore  AGENTS.md  Makefile  README.md  SPEC.md  TAKEOVER_PLAN.md  XIAOHONGSHU_PUBLISHING.md  monitor-zrok.sh
backend/: pyproject.toml
backend/app/: auth.py  main.py
backend/app/routers/: agent.py  books.py  chapters.py  images.py  prompts.py  publish.py
backend/app/services/: agent.py  publisher.py  storage.py
backend/data/: prompts.md
backend/data/books/agentic-ai/: book.json
backend/data/books/agentic-ai/chapters/: 01-claude-code-tips.md  cli-tools.md  short-term-trade.md  system-setup.md
backend/data/books/chinese-classics/: book.json
backend/data/books/chinese-classics/chapters/: 01-daily-recitation.md  02-poetry.md  03-essays.md
backend/data/books/from-museum-/: book.json
backend/data/books/from-museum-/chapters/: wealth-.md  悲催的牛.md
backend/data/books/reading-learning/: book.json
backend/data/books/reading-learning/chapters/: 01-how-to-read-literature.md  02-how-to-read-nonfiction.md  03-reading-lists.md  beliz-trip.md  first-time-here.md  first-time-here?.md  lottery-and-dodge-ball.md  orange-is-the-new-black.md  不亦说乎.md  书脊.md  伟大复兴.md  君子固穷.md  (+5 more)
backend/data/books/thinking/: book.json
backend/data/books/wealth/: book.json
backend/data/books/world/: book.json
backend/data/books/老田忆苦思甜/: book.json
backend/data/books/老田杂念/: book.json
backend/data/books/老田游记/: book.json
backend/xhs_webhook/: README.md  __init__.py  login.py  server.py
backend/zenapp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+65 files in other folders)
